--- a/src/html/partials/ham-panel.twig
+++ b/src/html/partials/ham-panel.twig
@@ -8,12 +8,12 @@
 					<span>Sections</span>
 					<div class="sub-nav">
 						<ul>
-							<li><a href="#section0">Section0</a></li>
-							<li><a href="#section1">Section1</a></li>
-							<li><a href="#section2">Section2</a></li>
-							<li><a href="#section3">Section3</a></li>
-							<li><a href="#section4">Section4</a></li>
-							<li><a href="#section5">Section5</a></li>
+							<li><a data-scroll href="#section0">Section0</a></li>
+							<li><a data-scroll href="#section1">Section1</a></li>
+							<li><a data-scroll href="#section2">Section2</a></li>
+							<li><a data-scroll href="#section3">Section3</a></li>
+							<li><a data-scroll href="#section4">Section4</a></li>
+							<li><a data-scroll href="#section5">Section5</a></li>
 						</ul>
 					</div>
 				</li>
