--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -11,7 +11,7 @@
 
 {% block body %}
 		<div class="test">
-			<section id="section0" class="test__section preface lazyload" data-bg="assets/images/test/back.jpg">
+			<section data-scroll-target="#section0" class="test__section preface lazyload" data-bg="assets/images/test/back.jpg">
 				<div class="container">
 					<div class="preface__holder">
 						<h1 class="preface__title">Test</h1>
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="section1" class="test__section test__section_1">
+			<section data-scroll-target="#section1" class="test__section test__section_1">
 				<canvas id="canvas" class="test__canvas"></canvas>
 				<div class="container">
 					<div class="test__holder">
@@ -294,10 +294,10 @@
 					requestAnimationFrame(tick);
 				</script>
 			</section>
-			<section id="section2" class="test__section test__section_2">
+			<section data-scroll-target="#section2" class="test__section test__section_2">
 				<div class="container">
 					<div class="test__holder">
-						<div class="slider slider_bottomed" data-plugin="testSlider">
+						<div class="slider" data-plugin="testSlider">
 							<div class="slider__holder">
 								<div class="slider__item" style="background-image: url('assets/images/test/4-xl.jpg');"></div>
 								<div class="slider__item" style="background-image: url('assets/images/test/5-xl.jpg');"></div>
@@ -317,7 +317,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="section3" class="test__section test__section_3">
+			<section data-scroll-target="#section3" class="test__section test__section_3">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
@@ -336,7 +336,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="section4" class="test__section test__section_4">
+			<section data-scroll-target="#section4" class="test__section test__section_4">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
@@ -355,7 +355,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="section5" class="test__section test__section_5">
+			<section data-scroll-target="#section5" class="test__section test__section_5">
 				<div class="container">
 					<div class="test__holder">
 						<div class="row">
