--- a/src/stylesheets/test.scss
+++ b/src/stylesheets/test.scss
@@ -1,10 +1,10 @@
 @import "imports";
 
 @import "~slick-carousel/slick/slick";
-@import "modules/slider";
-@import "modules/test/test-slider";
-@import "modules/modal";
+@import "components/slider";
+@import "components/modal";
 
+@import "modules/test/slider";
 
 .test {
 	color: #fff;
