--- a/src/html/test.twig
+++ b/src/html/test.twig
@@ -322,15 +322,15 @@
 					<div class="test__holder">
 						<div class="row">
 							<div class="col-md-5">
-								<h2 data-plugin="reveal" class="test__title" data-reveal-direction='{"x":"0", "y": "100"}'>Services</h2>
-								<div data-plugin="reveal" data-reveal-delay="300" data-reveal-direction='{"x":"0", "y": "-100"}' class="test__img">
+								<h2 data-plugin="reveal" class="test__title" data-reveal-distance='{"x":"0", "y": "100"}'>Services</h2>
+								<div data-plugin="reveal" data-reveal-delay="300" class="test__img">
 									<img class="lazyload" data-src="assets/images/test/3-xl.jpg" alt="Section3">
 								</div>
 								{{ icon('social-youtube' , {'width': 20, 'height': 20}) }}
 							</div>
 							<div class="col-md-6 offset-md-1">
-								<p data-plugin="reveal" data-reveal-delay="600" data-reveal-direction='{"x":"-100", "y": "100"}'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
-								<p data-plugin="reveal" data-reveal-delay="600" data-reveal-direction='{"x":"-100", "y": "-100"}'>Aliquam tempus consectetur dui a efficitur. Curabitur efficitur sem ac dignissim vulputate. In vel aliquam lorem. Etiam in nibh elementum, varius velit nec, vehicula purus. Class aptent taciti sociosqu ad </p>
+								<p data-plugin="reveal" data-reveal-delay="600" data-reveal-distance='{"x":"-100", "y": "100"}'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
+								<p data-plugin="reveal" data-reveal-delay="600" data-reveal-distance='{"x":"-100", "y": "-100"}'>Aliquam tempus consectetur dui a efficitur. Curabitur efficitur sem ac dignissim vulputate. In vel aliquam lorem. Etiam in nibh elementum, varius velit nec, vehicula purus. Class aptent taciti sociosqu ad </p>
 							</div>
 						</div>
 					</div>
